2013-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/holding.c (holding_cleanup_dir): fclose pid_FILE.

2013-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/holding.c: Fix.

2013-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm: Keep a current_slot by config.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/rait.pm: Fix perl warning.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/rait.pm: Set barcode in a reservation.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/rait.pm: Set chg in a reservation.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/progs.m4: Set LPRFLAG.

2013-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.c, server-src/planner.c: Call holding_cleanup.
	* server-src/holding.c: ignore tmp file, add pid file in holding disk
	  to prevent parallel use.

2013-06-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amreport.pl: Fix send-amreport-on.

2013-06-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Always get a status initially.

2013-06-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/glib-util.c, device-src/s3-device.c, device-src/s3.c,
	  ndmp-src/ndmpconnobj.h, perl/Amanda/Util.swg, server-src/amflush.c,
	  server-src/driver.c, server-src/holding.c, server-src/tapefile.c:
	  Fix memory leak.

2013-06-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fail with good error message if the
	  dataport-list is empty.

2013-06-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/ndmp.pm: s/destiation/destination/
	* perl/Amanda/Changer/robot.pm: (eject) Return an error if the drive
	  is empty.

2013-06-13  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/filter-process.c (xfer_filter_process): Add must_drain,